dnl -*- sh -*-
dnl
dnl  Author:
dnl    Denys Duchier <duchier@ps.uni-sb.de>
dnl
dnl  Copyright:
dnl    Denys Duchier,   1998
dnl
dnl  Last change:
dnl    $Date$ by $Author$
dnl    $Revision$
dnl
dnl  This file is part of Mozart, an implementation of Oz 3:
dnl    http://mozart.ps.uni-sb.de
dnl
dnl  See the file "LICENSE" or
dnl    http://mozart.ps.uni-sb.de/LICENSE.html
dnl  for information on usage and redistribution
dnl  of this file, and for a DISCLAIMER OF ALL
dnl  WARRANTIES.
dnl

dnl Process this file with autoconf to produce a configure script.

AC_INIT(ozdoc.sgml)
OZ_INIT
BUILDTOP=`cd ../..; pwd`
SRCTOP=`cd $srcdir/../..; pwd`
AC_PROG_INSTALL
OZ_PATH_PROG(OZENGINE,ozengine)
OZ_PATH_PROG(OZDOC,ozdoc,OZDOC=$BUILDTOP/doc/utilities/ozdoc)
AC_SUBST(BUILDTOP)
AC_SUBST(SRCTOP)
AC_SUBST(OZENGINE)
AC_SUBST(OZDOC)
AC_OUTPUT(Makefile)
errprint(ifdef([OZ_INIT],
 [],
 [autoconf failed: use 'autoconf -l ../..' to include ../../aclocal.m4.
]))
